<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/identifyBreed"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:onClick="nextPage1"
        android:text="@string/identifyBreed"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <Button
        android:id="@+id/identifyDog"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/identifyDog"
        android:onClick="nextPage2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identifyBreed" />

    <Button
        android:id="@+id/searchBreeds"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/searchBreeds"
        android:onClick="nextPage3"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identifyDog" />

    <Switch
        android:id="@+id/hardMode"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/mode"
        android:theme="@style/SwitchTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBreeds" />

</androidx.constraintlayout.widget.ConstraintLayout>